# flatcraft

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitignore  .prettierignore  01_questionnaire.md  01_questionnaire_answers.md  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  docker-compose.yml  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tsconfig.base.json  turbo.json
.claude/: settings.json
docs/: 02_ROADMAP.md  (+18 more)
workers/cad/: README.md  pyproject.toml
workers/cad/flatcraft_cad/: __init__.py  sentry_setup.py  server.py  unfold.py
workers/cad/flatcraft_cad/export/: __init__.py  dimensions.py  dxf.py  fonts.py  isometric.py  isometry_solid.py  pdf.py
workers/cad/flatcraft_cad/export/layout/: __init__.py  bend_badges.py  corner_picker.py  hole_dims.py
workers/cad/flatcraft_cad/materials/: __init__.py  industry_names.py
workers/cad/flatcraft_cad/templates/: __init__.py  base.py  corner_angle.py  enclosed_shelf.py  l_bracket.py  perforated_panel.py  perforated_panel_square.py  registry.py  wall_shelf.py  z_bracket.py
workers/cad/flatcraft_cad/validate/: __init__.py  bend.py  perforation.py  profile.py
workers/cad/tests/: test_bend_badges.py  test_bend_direction.py  test_corner_picker.py  test_dxf_export.py  test_finished_dimensions.py  test_hole_dims.py  test_industry_names.py  test_isometric.py  test_pdf_export.py  test_perforation_validator.py  test_profile_validator.py  test_sentry_setup.py  test_server.py  test_unfold.py  test_validator.py  test_validator_property.py  test_zero_holes.py
workers/cad/tests/fixtures/: ts_registry_slugs.json
workers/cad/tests/templates/: test_corner_angle.py  test_enclosed_shelf.py  test_enclosed_shelf_unfold_dxf.py  test_l_bracket.py  test_perforated_panel.py  test_perforated_panel_fill_math.py  test_perforated_panel_square.py  test_registry.py  test_wall_shelf.py  test_z_bracket.py
(+309 files in other folders)
