[project]
name = "flatcraft-cad"
version = "0.0.0"
description = "Sheet metal CAD worker for flatcraft (CadQuery + DXF/PDF/STEP export)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "flatcraft contributors" }]

dependencies = [
    "cadquery>=2.4.0",
    "ezdxf>=1.3.4",
    "reportlab>=4.2.5",
    "qrcode>=7.4.2",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "redis>=5.1.0",
    "bullmq>=2.10.0",
    "boto3>=1.35.30",
    "structlog>=24.4.0",
    "sentry-sdk>=2.16.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-snapshot>=0.9.0",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flatcraft_cad"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S101"]  # asserts in tests are fine

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=flatcraft_cad --cov-report=term-missing"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "moto>=5.2.1",
    "pypdf>=6.11.0",
    "types-boto3>=1.43.9",
    "types-qrcode>=8.2.0.20260508",
    "types-reportlab>=4.5.0.20260509",
]
